.gitignore fix for android autogenerated code

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .vs/
 XamarinDemo/XamarinDemo.Android/obj/
 XamarinDemo/XamarinDemo.Android/bin/
+XamarinDemo/XamarinDemo/obj/
 XamarinDemo/XamarinDemo.iOS/obj/
