--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 XamarinDemo/XamarinDemo.Android/obj/
 XamarinDemo/XamarinDemo.Android/bin/
 XamarinDemo/XamarinDemo/obj/
+XamarinDemo/XamarinDemo/bin/
 XamarinDemo/XamarinDemo.iOS/obj/
