--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ XamarinDemo/XamarinDemo.Android/bin/
 XamarinDemo/XamarinDemo/obj/
 XamarinDemo/XamarinDemo/bin/
 XamarinDemo/XamarinDemo.iOS/obj/
+XamarinDemo/XamarinDemo.Android/XamarinDemo.Android.csproj.user
