--- a/XamarinDemo/XamarinDemo/XamarinDemo.csproj
+++ b/XamarinDemo/XamarinDemo/XamarinDemo.csproj
@@ -24,5 +24,8 @@
     <EmbeddedResource Update="Views\Login.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\QualitestFeedPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
