--- a/XamarinDemo/XamarinDemo.Android/XamarinDemo.Android.csproj
+++ b/XamarinDemo/XamarinDemo.Android/XamarinDemo.Android.csproj
@@ -104,10 +104,13 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\graph_2.PNG" />
+    <AndroidResource Include="Resources\drawable\arrow_right.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\graph_3.png" />
+    <AndroidResource Include="Resources\drawable\image_1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\image_2.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
