--- a/XamarinDemo/XamarinDemo.Android/XamarinDemo.Android.csproj
+++ b/XamarinDemo/XamarinDemo.Android/XamarinDemo.Android.csproj
@@ -112,5 +112,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\image_2.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Intergen.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\hamburger.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
