add show/hide password image & implement cancel logout page behaviour

--- a/XamarinDemo/XamarinDemo.Android/XamarinDemo.Android.csproj
+++ b/XamarinDemo/XamarinDemo.Android/XamarinDemo.Android.csproj
@@ -118,5 +118,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\hamburger.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\toggle_password.PNG" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
