--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ XamarinDemo/XamarinDemo/obj/
 XamarinDemo/XamarinDemo/bin/
 XamarinDemo/XamarinDemo.iOS/obj/
 XamarinDemo/XamarinDemo.Android/XamarinDemo.Android.csproj.user
+Postman/Xamarin Demo Server Environment.postman_environment.json
