use cached Image, platform effects & entry renderers

--- a/XamarinDemo/XamarinDemo.Android/XamarinDemo.Android.csproj
+++ b/XamarinDemo/XamarinDemo.Android/XamarinDemo.Android.csproj
@@ -64,6 +64,8 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BorderLessEntryRenderer.cs" />
+    <Compile Include="FocusEffect.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -120,6 +122,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\toggle_password.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\instagram.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
