--- a/XamarinDemo/XamarinDemo.iOS/XamarinDemo.iOS.csproj
+++ b/XamarinDemo/XamarinDemo.iOS/XamarinDemo.iOS.csproj
@@ -60,6 +60,8 @@
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="BorderLessEntryRenderer.cs" />
+    <Compile Include="FocusEffect.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <None Include="Entitlements.plist" />
